--- a/.github/workflows/MAIN.yml
+++ b/.github/workflows/MAIN.yml
@@ -1,14 +1,14 @@
 name: Generate snake animation
 
 on:
-  schedule: # execute every 12 hours
-    - cron: "* */12 * * *"
+  schedule:
+    - cron: "0 */12 * * *"  # Runs every 12 hours (at 0 and 12 UTC)
 
   workflow_dispatch:
 
   push:
     branches:
-    - main
+      - main
 
 jobs:
   generate:
@@ -18,14 +18,16 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate snake.svg
+      - name: Checkout Repository
+        uses: actions/checkout@v3  # Ensures access to repo
+
+      - name: Generate Snake Animation
         uses: Platane/snk/svg-only@v3
         with:
           github_user_name: 899-12
-          outputs: dist/snake.svg?palette=github-dark
+          outputs: dist/snake.svg  # Corrected output path
 
-
-      - name: push snake.svg to the output branch
+      - name: Push Snake Animation to Output Branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
